2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Added information from MMC-1 Draft.

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Added information from USB Mass Storage Class – UFI Command
	  Specification.

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented Mode Page 0x00: Drive Operation Mode page.

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Added information from INF-8070.

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented Mode Page 0x1C: Timer & Protect page.

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented Mode Page 0x1B: Removable Block Access
	  Capabilities page.

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Added information from ANSI X3.304-1997 (MMC-1).

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Added information from SSC-2.

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Added information from SSC-1

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented Mode Page 0x0F: Data compression page.

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Added information from USB Mass Storage Class - UFI Command
	  Specification

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented Mode Page 0x1C subpage 0x01: Background Control
	  mode page.

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Added information from SBC-3.

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Added information from SBC-2.

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 10h for direct-access
	  devices.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs: